Iterative solver support and iterative mode implemented